[project]
name = "p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
